# garage-ramp-optimizer

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  COMPILAR.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_exe.py  mkdocs.yml  pyproject.toml  ramp_env.py  ramp_gui.py  ramp_i18n.py  ramp_model.py  ramp_offsets.csv  ramp_offsets_3slope.csv  ramp_offsets_3slope_top.csv  ramp_offsets_4slope.csv  ramp_offsets_4slope_chord.csv  ramp_offsets_4slope_top.csv  ramp_offsets_smooth.csv  ramp_offsets_smooth_chord.csv  ramp_offsets_smooth_top.csv  ramp_optimizer.py  ramp_profiles.py  ramp_search.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cleanup-storage.yml  docs.yml  release-please.yml  release.yml
docs/: COMPILAR.md  SIGNPATH.md  capture_gui_screenshot.py  generate_icon.py  index.md
locale/: ramp_optimizer.pot
locale/es/LC_MESSAGES/: ramp_optimizer.mo  ramp_optimizer.po
scripts/: sync_translations.py
tests/: conftest.py  test_blueprints_visual.py  test_chord_coords.py  test_dataclasses.py  test_evaluate.py  test_i18n.py  test_profiles.py  test_search_determinism.py  test_validation_and_i18n.py
